<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ch.deletescape.lawnchair.views.SpringNestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/mainLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_margin" />

            <LinearLayout
                android:id="@+id/aboutLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_margin"
                android:layout_marginEnd="@dimen/layout_margin"
                android:layout_marginBottom="@dimen/layout_margin"
                android:background="@drawable/bgstyle_md2"
                android:orientation="vertical"
                android:padding="@dimen/layout_margin"
                android:visibility="gone">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/content_margin"
                    android:text="@string/action_about"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/content_margin"
                    android:text="@string/about_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.TextView.SpinnerItem" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/content_margin"
                        android:layout_weight="0"
                        app:cardBackgroundColor="@android:color/transparent"
                        app:cardCornerRadius="@dimen/cardview_radius"
                        app:cardElevation="0dp"
                        app:cardMaxElevation="0dp">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/coolapkAppCompatButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bgstyle_md2"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:text="@string/coolapk" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0"
                        app:cardBackgroundColor="@android:color/transparent"
                        app:cardCornerRadius="@dimen/cardview_radius"
                        app:cardElevation="0dp"
                        app:cardMaxElevation="0dp">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/githubAppCompatButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bgstyle_md2"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:text="@string/github" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_margin"
                android:layout_marginEnd="@dimen/layout_margin"
                android:layout_marginBottom="@dimen/layout_margin"
                android:background="@drawable/bgstyle_md2"
                android:orientation="vertical"
                android:padding="@dimen/layout_margin">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/step1_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/linkTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_margin"
                android:layout_marginEnd="@dimen/layout_margin"
                android:layout_marginBottom="@dimen/layout_margin"
                android:background="@drawable/bgstyle_md2"
                android:orientation="vertical"
                android:padding="@dimen/layout_margin">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/content_margin"
                    android:text="@string/setp2_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/musicFolderAppCompatTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/content_margin"
                        android:layout_weight="1"
                        android:text="music_folder"
                        android:textAppearance="@style/TextAppearance.AppCompat.Widget.TextView.SpinnerItem" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0"
                        app:cardBackgroundColor="@android:color/transparent"
                        app:cardCornerRadius="@dimen/cardview_radius"
                        app:cardElevation="0dp"
                        app:cardMaxElevation="0dp">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/musicFolderAppCompatButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bgstyle_md2"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:text="@string/select_button" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_margin"
                android:layout_marginEnd="@dimen/layout_margin"
                android:layout_marginBottom="@dimen/layout_margin"
                android:background="@drawable/bgstyle_md2"
                android:orientation="vertical"
                android:padding="@dimen/layout_margin">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/content_margin"
                    android:text="@string/setp3_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/destinationFolderAppCompatTextView"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginEnd="@dimen/content_margin"
                        android:layout_weight="1"
                        android:text="destination_folder"
                        android:textAppearance="@style/TextAppearance.AppCompat.Widget.TextView.SpinnerItem" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0"
                        app:cardBackgroundColor="@android:color/transparent"
                        app:cardCornerRadius="@dimen/cardview_radius"
                        app:cardElevation="0dp"
                        app:cardMaxElevation="0dp">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/destinationFolderAppCompatButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bgstyle_md2"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:text="@string/select_button" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_margin"
                android:layout_marginEnd="@dimen/layout_margin"
                android:layout_marginBottom="@dimen/layout_margin"
                android:background="@drawable/bgstyle_md2"
                android:orientation="vertical"
                android:padding="@dimen/layout_margin">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/content_margin"
                    android:text="@string/setp4_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/deleteOriginalFileSwitchMaterial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_original_file"
                    android:textAppearance="@style/TextAppearance.AppCompat.Widget.TextView.SpinnerItem" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:progress="0"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/layout_margin"
                android:layout_marginEnd="@dimen/layout_margin"
                android:layout_marginBottom="@dimen/layout_margin"
                android:background="@drawable/bgstyle_md2"
                android:orientation="vertical"
                android:padding="@dimen/layout_margin">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/layout_margin"
                    android:text="@string/setp5_title"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardCornerRadius="@dimen/cardview_radius"
                    app:cardElevation="0dp"
                    app:cardMaxElevation="0dp">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/startAppCompatButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/bgstyle_md2"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:text="@string/start_button" />
                </androidx.cardview.widget.CardView>

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:indeterminate="true"
                    android:progress="0"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
    </ch.deletescape.lawnchair.views.SpringNestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>